Ajustes al metodo de autenticación
